--- a/app/static/css/mystyle.css
+++ b/app/static/css/mystyle.css
@@ -1,3 +1,17 @@
+.h_home{
+	color: red;
+	font-weight: bold;
+}
+.p_home{
+	font-size: 1.3em;
+}
+.p_test{
+	text-align:right;
+}
+.div_home{
+	width: 80vw;
+	margin: 0 auto;
+}
 .chart618{
 	width: 80vw;
 	height: 49.44vw;
