--- a/app/static/css/mystyle.css
+++ b/app/static/css/mystyle.css
@@ -17,6 +17,10 @@
 	height: 49.44vw;
 	margin: 0 auto;
 }
+.loginform{
+	width: 30vw;
+	margin: 0 auto;
+}
 .chart600{
 	width: 80vw;
 	height: 48vw;
