--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,38 @@
 {% extends "base.html" %}
 {% block content %}
-  <form  style="margin:2cm 10cm 2cm 10cm;border:1px solid red" method="post">
-    <center>
-      <font size="6">
-        <span>username:</span><input type="text" name="username" id="username" style="height:30px"><br/>
-        <span>password:</span><input type="password" name="password" id="password" style="height:30px"><br/>
-        <button type="submit" id="loginBtn" style="height:30px;width:100px;"><font size="5">login</font></button>
-      </font>
-    </center>
+<div class="loginform">
+  <form class="form-horizontal" role="form" method="post">
+      <div class="form-group">
+            <label for="username" class="col-sm-3 control-label">用户名</label>
+            <div class="col-sm-9">
+             <input type="text" class="form-control" id="username" name="userid"
+                placeholder="如需申请账号，请致电 19984101161">
+            </div>
+      </div>
+      <div class="form-group">
+          <label for="password" class="col-sm-3 control-label">密码</label>
+          <div class="col-sm-9">
+             <input type="password" class="form-control" id="password" name="password"
+                placeholder="请输入密码">
+          </div>
+     </div>
+     <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-8">
+             <div class="checkbox">
+                <label><input type="checkbox">请记住我</label>
+             </div>
+          </div>
+     </div>
+     <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-8">
+             <button type="submit" class="btn btn-default">登录</button>
+          </div>
+       </div>
+       <div class="form-group text-center">
+        {% if error %}
+            <h3 class="h_home">{{ error }}</h3>
+        {% endif %}
+      </div>
   </form>
-  {% if error %}
-      <h1 style="color:red">{{ error }}!</h1>
-  {% endif %}
+</div>
 {% endblock %}
