--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,80 +1,117 @@
 {% extends "base.html" %}
 {% block content %}
     <!-- <div align="right"><p><b>每天早晨叫醒你的不应该是闹钟，而应该是梦想！！！</b></p></div> -->
-    <!-- <br> -->
-    <!-- ###################################################################################### -->
-    <div class="div_home">
-        <h3 class="h_home">玉米市场资讯</h3>
-        <p class="p_home">
-            <a href="/priceSummarize" target="_blank">产区价格与工厂库存</a>&nbsp;&nbsp;
-            <a href="/shouliangjindu" target="_blank">售粮进度</a>&nbsp;&nbsp;
-            <a href="/portcarryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
-            <a href="/deepprocessing" target="_blank">深加工开工率与利润</a>&nbsp;&nbsp;
-            <a href="/corntempres" target="_blank">临储拍卖</a>&nbsp;&nbsp;
-            <a href="/cornbasischart" target="_blank">玉米基差走势图</a>&nbsp;&nbsp;
-            <a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a>&nbsp;&nbsp;
-            <a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a>&nbsp;&nbsp;
-            <a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a>&nbsp;&nbsp;
-        </p>
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <!-- <font color="red"><p><b>分析报告系列</b></p></font>
-        <p>
-            <a href="/cornAnalysisReport" target="_blank">玉米分析报告</a>&nbsp;&nbsp;
-        </p> -->
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <h3 class="h_home">天气情况</h3>
-        <p class="p_home">
-            <a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a>&nbsp;&nbsp;
-            <a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a>&nbsp;&nbsp;
-            <a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a>&nbsp;&nbsp;
-            <a href="http://www.nmc.cn/publish/observations/precipitation-10pa.html" target="_blank">月降水距平(中国)</a>&nbsp;&nbsp;
-            <a href="http://www.cpc.ncep.noaa.gov/" target="_blank">气温降水概率(美国)</a>&nbsp;&nbsp;
-            <a href="http://water.weather.gov/precip/" target="_blank">降水量(美国)</a>&nbsp;&nbsp;
-            <a href="http://sharaku.eorc.jaxa.jp/cgi-bin/amsr/elni2/elni2.cgi?lang=e" target="_blank">厄尔尼诺监测</a>
-        </p>
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <h3 class="h_home">持仓情况</h3>
-        <p class="p_home">
-            <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a>&nbsp;&nbsp;
-            <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/cdrb/index.html" target="_blank">大商所仓单日报</a>&nbsp;&nbsp;
-            <a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/jgtj/jgsj/index.html" target="_blank">大商所交割数据</a>&nbsp;&nbsp;
-            <a href="http://www.czce.com.cn/portal/jysj/qhjysj/ccpm/A09112003index_1.htm" target="_blank">郑商所持仓排名</a>&nbsp;&nbsp;
-            <a href="http://www.czce.com.cn/portal/jysj/qhjysj/cdrb/A09112009index_1.htm" target="_blank">郑商所仓单日报</a>&nbsp;&nbsp;
-            <a href="http://www.czce.com.cn/cn/jysj/jgpd/H770308index_1.htm" target="_blank">郑商所交割配对</a>&nbsp;&nbsp;
-            <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a>&nbsp;&nbsp;
-            <a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a>&nbsp;&nbsp;
-        </p>
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <h3 class="h_home">分析报告</h3>
-        <p class="p_home">
-            <a href="/grainReport" target="_blank">谷物报告</a>&nbsp;&nbsp;
-            <a href="/oilSeedReport" target="_blank">油脂油料报告</a>&nbsp;&nbsp;
-            <a href="/rbjiReport" target="_blank">黑色产业报告</a>&nbsp;&nbsp;
-            <a href="/chemicalsReport" target="_blank">化工品报告</a>&nbsp;&nbsp;
-            <a href="/otherReport" target="_blank">其他</a>&nbsp;&nbsp;
-            <a href="/cornAnalysisReport" target="_blank">玉米分析报告</a>
-        </p>
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <h3 class="h_home">交易数据实时监控</h3>
-        <p class="p_home">
-            <a href="/StrategyTrade" target="_blank">分策略成交数据</a>&nbsp;&nbsp;
-            <a href="/StrategyDetail" target="_blank">分策略细节日志</a>&nbsp;&nbsp;
-            <a href="/strategyInfo" target="_blank">策略持仓</a>&nbsp;&nbsp;
-            <a href="/strategyVars" target="_blank">策略变量数据</a>&nbsp;&nbsp;
-            <a href="/strategyHistoryData" target="_blank">策略历史数据</a>
-        </p>
-        <!-- <br> -->
-        <!-- ###################################################################################### -->
-        <h3 class="h_home">其他</h3>
-        <p class="p_home">
-            <a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a>&nbsp;&nbsp;
-            <a href="/aboutus" target="_blank">项目捐赠</a>
-        </p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">玉米市场资讯</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
+                    <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
+                    <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
+                    <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
+                    <li><a href="/corntempres" target="_blank">临储拍卖</a></li>
+                    <li><a href="/cornbasischart" target="_blank">玉米基差走势图</a></li>
+                    <li><a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a></li>
+                    <li><a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a></li>
+                    <li><a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">天气情况</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a></li>
+                    <li><a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a></li>
+                    <li><a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a></li>
+                    <li><a href="http://www.nmc.cn/publish/observations/precipitation-10pa.html" target="_blank">月降水距平(中国)</a></li>
+                    <li><a href="http://www.cpc.ncep.noaa.gov/" target="_blank">气温降水概率(美国)</a></li>
+                    <li><a href="http://water.weather.gov/precip/" target="_blank">降水量(美国)</a></li>
+                    <li><a href="http://sharaku.eorc.jaxa.jp/cgi-bin/amsr/elni2/elni2.cgi?lang=e" target="_blank">厄尔尼诺监测</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">持仓情况</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a></li>
+                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/cdrb/index.html" target="_blank">大商所仓单日报</a></li>
+                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/jgtj/jgsj/index.html" target="_blank">大商所交割数据</a></li>
+                    <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/ccpm/A09112003index_1.htm" target="_blank">郑商所持仓排名</a></li>
+                    <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/cdrb/A09112009index_1.htm" target="_blank">郑商所仓单日报</a></li>
+                    <li><a href="http://www.czce.com.cn/cn/jysj/jgpd/H770308index_1.htm" target="_blank">郑商所交割配对</a></li>
+                    <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a></li>
+                    <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">分析报告</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="/grainReport" target="_blank">谷物报告</a></li>
+                    <li><a href="/oilSeedReport" target="_blank">油脂油料报告</a></li>
+                    <li><a href="/rbjiReport" target="_blank">黑色产业报告</a></li>
+                    <li><a href="/chemicalsReport" target="_blank">化工品报告</a></li>
+                    <li><a href="/otherReport" target="_blank">其他</a></li>
+                    <li><a href="/cornAnalysisReport" target="_blank">玉米分析报告</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">交易数据实时监控</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="/StrategyTrade" target="_blank">分策略成交数据</a></li>
+                    <li><a href="/StrategyDetail" target="_blank">分策略细节日志</a></li>
+                    <li><a href="/strategyInfo" target="_blank">策略持仓</a></li>
+                    <li><a href="/strategyVars" target="_blank">策略变量数据</a></li>
+                    <li><a href="/strategyHistoryData" target="_blank">策略历史数据</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-3 col-md-3">
+                <h3 class="h_style">其他</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="list-inline content_fontsize">
+                    <li><a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a></li>
+                    <li><a href="/aboutus" target="_blank">项目捐赠</a></li>
+                </ul>
+            </div>
+        </div>
+
         <br>
         <!-- ###################################################################################### -->
         <br>
