--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,30 +1,33 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="loginform">
+<br>
+<br>
+<br>
+<div class="container">
   <form class="form-horizontal" role="form" method="post">
       <div class="form-group">
-            <label for="username" class="col-sm-3 control-label">用户名</label>
-            <div class="col-sm-9">
+            <label for="username" class="col-sm-offset-2 col-sm-3 control-label">用户名</label>
+            <div class="col-sm-3">
              <input type="text" class="form-control" id="username" name="userid"
                 placeholder="如需申请账号，请致电 19984101161">
             </div>
       </div>
       <div class="form-group">
-          <label for="password" class="col-sm-3 control-label">密码</label>
-          <div class="col-sm-9">
+          <label for="password" class="col-sm-offset-2 col-sm-3 control-label">密码</label>
+          <div class="col-sm-3">
              <input type="password" class="form-control" id="password" name="password"
                 placeholder="请输入密码">
           </div>
      </div>
      <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-8">
+          <div class="col-sm-offset-5 col-sm-3">
              <div class="checkbox">
                 <label><input type="checkbox">请记住我</label>
              </div>
           </div>
      </div>
      <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-8">
+          <div class="col-sm-offset-5 col-sm-3">
              <button type="submit" class="btn btn-default">登录</button>
           </div>
        </div>
