--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -5,18 +5,22 @@
 	<p>If you are interested in the web, call the phone 15542377707, the same number with WeChat!</p>
 	<h3>项目捐赠</h3>
 	<p>此项目为开源项目，可永久免费使用，没有强制捐赠要求！</p>
-	<div align="center">
-		<table width=1000>
-			<tr>
-			<td><p>微信捐赠</p></td>
-			<td><p>支付宝捐赠</p></td>
-			</tr>
-			<tr>
-			<td><img src="../static/weixin11.jpg" width=200 height=200 alt="微信捐赠"></td>
-			<td><img src="../static/zhifubao11.jpg" width=200 height=200 alt="支付宝捐赠"></td>
-			</tr>
-		</table>
-	</div>
+
+	<form class="form-horizontal">
+		<div class="control-group">
+			<dl>
+				<dt>微信捐赠</dt>
+				<dd><img src="../static/weixin11.jpg" width=200 height=200 alt="微信捐赠"></dd>
+			</dl>
+		</div>
+		<div class="control-group">
+			<dl>
+				<dt>支付宝捐赠</dt>
+				<dd><img src="../static/zhifubao11.jpg" width=200 height=200 alt="支付宝捐赠"></dd>
+			</dl>
+		</div>
+	</form>
+
 	<p>作为回馈，我仍想把利弗莫尔的几条建议赠送于你。</p>
 	<ol>
 		<li style='color:red'>优秀的投机家们总是在等待，总是有耐心，等待着市场证实他们的判断。要记住，在市场本身的表现证实你的看法之前，不要完全相信你的判断。</li>
