--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div align="center">
+	<div class="container text-center">
 	    <h2 class="h_style">Welcome To The LGT-INVESTMENT's World !</h2>
 	    <p class="content_fontsize">真 诚 地 提 示 您 ： 交 易 有 风 险 ， 投 资 需 谨 慎 ！</p>
     </div>   
