--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <!-- <p>{{corn_basis_l}}</p> -->
-    <div align="center">
-        <h1><b><font size="6", color="red">玉米期现基差图</font></b></h1>
-    </div>
-    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <p class="head1_style" align="center">玉米期现基差图</p>
     <div id="basis1" class="chart600"></div>
     <div id="basis5" class="chart600"></div>
     <div id="basis9" class="chart600"></div>
     <div id="cornbasis" class="chart600"></div>
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+
 
     <script type="text/javascript">
         // function fetchData(cb) {
