mod data format

--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -2,24 +2,18 @@
 {% block content %}
 <div class="container">
 
-	<p>If you are interested in the web, call the phone 15542377707, the same number with WeChat!</p>
 	<h3>项目捐赠</h3>
 	<p>此项目为开源项目，可永久免费使用，没有强制捐赠要求！</p>
+	<p>如您对此感兴趣，可致电19984101161详询！</p>
 
-	<form class="form-horizontal">
-		<div class="control-group">
-			<dl>
-				<dt>微信捐赠</dt>
-				<dd><img src="../static/weixin11.jpg" width=200 height=200 alt="微信捐赠"></dd>
-			</dl>
-		</div>
-		<div class="control-group">
-			<dl>
-				<dt>支付宝捐赠</dt>
-				<dd><img src="../static/zhifubao11.jpg" width=200 height=200 alt="支付宝捐赠"></dd>
-			</dl>
-		</div>
-	</form>
+	<div class="row">
+		<div class="col-md-3 text-center">微信捐赠</div>
+		<div class="col-md-3 text-center">支付宝捐赠</div>
+	</div>
+	<div class="row">
+		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/weixin11.jpg"></div>
+		<div class="col-md-3"><img class="img-responsive" src="../static/zhifubao11.jpg"></div>
+	</div>
 
 	<p>作为回馈，我仍想把利弗莫尔的几条建议赠送于你。</p>
 	<ol>
