--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/weixin11.jpg"></div>
-		<div class="col-md-3"><img class="img-responsive" src="../static/zhifubao11.jpg"></div>
+		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/zhifubao11.jpg"></div>
 	</div>
 
 	<p>作为回馈，我仍想把利弗莫尔的几条建议赠送于你。</p>
