--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,8 @@
     <!-- bootstrap table  -->
     <link href="https://cdn.bootcss.com/bootstrap-table/1.14.2/bootstrap-table.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/bootstrap-table/1.14.2/bootstrap-table.js"></script>
+    <!-- echarts -->
+    <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
 </head>
 <body>
 	<div class="container text-center">
