--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,113 +4,127 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">玉米市场资讯</h3>
-            </div>
-        </div>
-        <div class="row">
             <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
-                    <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
-                    <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
-                    <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
-                    <li><a href="/corntempres" target="_blank">临储拍卖</a></li>
-                    <li><a href="/cornbasischart" target="_blank">玉米基差走势图</a></li>
-                    <li><a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a></li>
-                    <li><a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a></li>
-                    <li><a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a></li>
-                </ul>
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">玉米市场资讯</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
+                            <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
+                            <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
+                            <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
+                            <li><a href="/corntempres" target="_blank">临储拍卖</a></li>
+                            <li><a href="/pigprice" target="_blank">生猪价格</a></li>
+                            <li><a href="/cornbasischart" target="_blank">玉米基差走势图</a></li>
+                            <li><a href="/cornspreadchart" target="_blank">玉米期货价差走势图</a></li>
+                            <li><a href="http://www.dce.com.cn/qiquanwang/pxjy/qqgj74/index.html" target="_blank">期权价格计算器</a></li>
+                            <li><a href="/cornPrice" target="_blank">玉米潮干粮价格计算</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">天气情况</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a></li>
+                            <li><a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a></li>
+                            <li><a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a></li>
+                            <li><a href="http://www.nmc.cn/publish/observations/precipitation-10pa.html" target="_blank">月降水距平(中国)</a></li>
+                            <li><a href="http://www.cpc.ncep.noaa.gov/" target="_blank">气温降水概率(美国)</a></li>
+                            <li><a href="http://water.weather.gov/precip/" target="_blank">降水量(美国)</a></li>
+                            <li><a href="http://sharaku.eorc.jaxa.jp/cgi-bin/amsr/elni2/elni2.cgi?lang=e" target="_blank">厄尔尼诺监测</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">持仓情况</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a></li>
+                            <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/cdrb/index.html" target="_blank">大商所仓单日报</a></li>
+                            <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/jgtj/jgsj/index.html" target="_blank">大商所交割数据</a></li>
+                            <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/ccpm/A09112003index_1.htm" target="_blank">郑商所持仓排名</a></li>
+                            <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/cdrb/A09112009index_1.htm" target="_blank">郑商所仓单日报</a></li>
+                            <li><a href="http://www.czce.com.cn/cn/jysj/jgpd/H770308index_1.htm" target="_blank">郑商所交割配对</a></li>
+                            <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a></li>
+                            <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">分析报告</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="/grainReport" target="_blank">谷物报告</a></li>
+                            <li><a href="/oilSeedReport" target="_blank">油脂油料报告</a></li>
+                            <li><a href="/rbjiReport" target="_blank">黑色产业报告</a></li>
+                            <li><a href="/chemicalsReport" target="_blank">化工品报告</a></li>
+                            <li><a href="/otherReport" target="_blank">其他</a></li>
+                            <li><a href="/cornAnalysisReport" target="_blank">玉米分析报告</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">交易数据实时监控</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="/StrategyTrade" target="_blank">分策略成交数据</a></li>
+                            <li><a href="/StrategyDetail" target="_blank">分策略细节日志</a></li>
+                            <li><a href="/strategyInfo" target="_blank">策略持仓</a></li>
+                            <li><a href="/strategyVars" target="_blank">策略变量数据</a></li>
+                            <li><a href="/strategyHistoryData" target="_blank">策略历史数据</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-3">
+                        <h3 class="h_style">其他</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline content_fontsize">
+                            <li><a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a></li>
+                            <li><a href="/aboutus" target="_blank">项目捐赠</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div id="basis9" class="chart_home"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">天气情况</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a></li>
-                    <li><a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a></li>
-                    <li><a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a></li>
-                    <li><a href="http://www.nmc.cn/publish/observations/precipitation-10pa.html" target="_blank">月降水距平(中国)</a></li>
-                    <li><a href="http://www.cpc.ncep.noaa.gov/" target="_blank">气温降水概率(美国)</a></li>
-                    <li><a href="http://water.weather.gov/precip/" target="_blank">降水量(美国)</a></li>
-                    <li><a href="http://sharaku.eorc.jaxa.jp/cgi-bin/amsr/elni2/elni2.cgi?lang=e" target="_blank">厄尔尼诺监测</a></li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">持仓情况</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/rcjccpm/index.html" target="_blank">大商所持仓排名</a></li>
-                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/rtj/cdrb/index.html" target="_blank">大商所仓单日报</a></li>
-                    <li><a href="http://www.dce.com.cn/dalianshangpin/xqsj/tjsj26/jgtj/jgsj/index.html" target="_blank">大商所交割数据</a></li>
-                    <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/ccpm/A09112003index_1.htm" target="_blank">郑商所持仓排名</a></li>
-                    <li><a href="http://www.czce.com.cn/portal/jysj/qhjysj/cdrb/A09112009index_1.htm" target="_blank">郑商所仓单日报</a></li>
-                    <li><a href="http://www.czce.com.cn/cn/jysj/jgpd/H770308index_1.htm" target="_blank">郑商所交割配对</a></li>
-                    <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=pm" target="_blank">上期所持仓排名</a></li>
-                    <li><a href="http://www.shfe.com.cn/statements/dataview.html?paramid=dailystock" target="_blank">上期所仓单日报</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">分析报告</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="/grainReport" target="_blank">谷物报告</a></li>
-                    <li><a href="/oilSeedReport" target="_blank">油脂油料报告</a></li>
-                    <li><a href="/rbjiReport" target="_blank">黑色产业报告</a></li>
-                    <li><a href="/chemicalsReport" target="_blank">化工品报告</a></li>
-                    <li><a href="/otherReport" target="_blank">其他</a></li>
-                    <li><a href="/cornAnalysisReport" target="_blank">玉米分析报告</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">交易数据实时监控</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="/StrategyTrade" target="_blank">分策略成交数据</a></li>
-                    <li><a href="/StrategyDetail" target="_blank">分策略细节日志</a></li>
-                    <li><a href="/strategyInfo" target="_blank">策略持仓</a></li>
-                    <li><a href="/strategyVars" target="_blank">策略变量数据</a></li>
-                    <li><a href="/strategyHistoryData" target="_blank">策略历史数据</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3 class="h_style">其他</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="list-inline content_fontsize">
-                    <li><a href="/cornPriceInsert" target="_blank">玉米现货价格录入</a></li>
-                    <li><a href="/aboutus" target="_blank">项目捐赠</a></li>
-                </ul>
-            </div>
-        </div>
 
         <br>
         <!-- ###################################################################################### -->
@@ -119,4 +133,128 @@
         <p class="p_test"><a href="/temptest" target="_blank">临时测试1</a></p>
         <p class="p_test"><a href="/temptest2" target="_blank">临时测试2</a></p>
     </div>
+
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart3 = echarts.init(document.getElementById('basis9'), 'vintage');
+        var my_corn_year_basis9_l = {{corn_year_basis9_l|tojson}};
+        // myChart.showLoading();
+
+        // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: '现货-期货9月基差',
+                left:'center'
+            },
+            tooltip: {
+                trigger: 'axis',
+                axisPointer:{
+                    type:'cross'
+                }
+            },
+            // emphasis: {
+            //     itemStyle: {
+            //         color: 'blue'
+            //     },
+            //     label: {
+            //         show: true,
+            //         formatter: 'This is a emphasis label.'
+            //     
+            // },
+            legend: {
+                data:['2019', '2018', '2017', '2016', '2015'],
+                y:30
+            },
+            xAxis: {
+                type:'category',
+                axisLabel:{
+                    // formatter:'{{value}}kg'
+                    formatter: function (value, index) {
+                        // 格式化成月/日，只在第一个刻度显示年份
+                        var date = new Date(value);
+                        // var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                        var texts = [date.getMonth()+1, date.getDate()];
+                        // if (index === 0) {
+                        //     texts.unshift(date.getFullYear());
+                        // }
+                        return texts.join('/');
+                    }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
+                // data: []
+            },
+            yAxis: {},
+            // dataZoom: [
+            //     {
+            //         type: 'slider',
+            //         start:0,
+            //         end:100
+            //     }
+            // ],
+            dataset:{
+                dimensions: ['date', '2019basis9', '2018basis9', '2017basis9', '2016basis9', '2015basis9'],
+                source: my_corn_year_basis9_l
+            },
+            series: [
+                {
+                    name: '2019',
+                    type: 'line',
+                    // color:'black',
+                    // symbol:'none',
+                    // symbolSize:8,
+                    lineStyle:{
+                        width:4,
+                        type:"solid",
+                    },
+                    connectNulls:true,
+                    // data: {{l4}}
+                },
+                {
+                    name: '2018',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4}}
+                },
+                {
+                    name: '2017',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                },
+                {
+                    name: '2016',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                },
+                {
+                    name: '2015',
+                    type: 'line',
+                    connectNulls:true,
+                    // data: {{l4s}}
+                }
+            ]
+        };
+
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart3.setOption(option);
+    </script>
+    <script type="text/javascript">
+        window.onresize = function(){
+            // myChart1.resize()
+            // myChart2.resize()
+            myChart3.resize()
+            // myChart4.resize()
+        }
+    </script>
 {% endblock %}
+
