--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -11,8 +11,8 @@
 		<div class="col-md-3 text-center">支付宝捐赠</div>
 	</div>
 	<div class="row">
-		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/weixin11.jpg"></div>
-		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/zhifubao11.jpg"></div>
+		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/img/weixin11.jpg"></div>
+		<div class="col-md-3"><img class="img-responsive img-thumbnail" src="../static/img/zhifubao11.jpg"></div>
 	</div>
 
 	<p>作为回馈，我仍想把利弗莫尔的几条建议赠送于你。</p>
