--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
+    {% if title %}
+    <title>{{title}}</title>
+    {% else %}
     <title>Welcome To The LGT-INVESTMENT's World</title>
-
+    {% endif%}
+    
     <link rel="stylesheet" type="text/css" href="../static/css/mystyle.css">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
