--- a/app/templates/priceSummarize.html
+++ b/app/templates/priceSummarize.html
@@ -24,9 +24,9 @@
         // tb.rows[3].cells[8].style.display='none';
         // tb.rows[2].cells[8].rowSpan = 2;
 
-        var length = tb.rows.length;
+        var length = tb.rows.item(0).cells.length;
         console.log(length);
-        for(var i=0;i<length+1;i++){
+        for(var i=0;i<length;i++){
             tb.rows[0].cells[i].style.background='LightSteelBlue';
             tb.rows[7].cells[i].style.color='red';
         }
@@ -50,9 +50,9 @@
         // tb.rows[3].cells[8].style.display='none';
         // tb.rows[2].cells[8].rowSpan = 2;
 
-        var length = tb.rows.length;
-        console.log(length);
-        for(var i=0;i<length+1;i++){
+        var length = tb.rows.item(0).cells.length;
+        // console.log(length);
+        for(var i=0;i<length;i++){
             tb.rows[0].cells[i].style.background='LightSteelBlue';
             if (i>3) {
                 tb.rows[13].cells[i].style.background='LightSteelBlue';
@@ -64,41 +64,9 @@
         }
     </script>
 
-    <font size="6" color="blue"><p align="center">深加工企业库存（天）</p></font>
-<!--     <div>
-        <table id="deepco" border="1" cellpadding="10" align="center">
-            {% for row in deepcarryout_df.values %}
-            <tr>
-                {% for cell in row %}
-                <td align="center">
-                    {{cell | replace('nan','')}}
-                </td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-    <script type="text/javascript">
-        var tb2 = document.getElementById("deepco"); 
-        tb2.rows[2].cells[0].style.display='none';
-        tb2.rows[3].cells[0].style.display='none';
-        tb2.rows[1].cells[0].rowSpan = 3;
-        tb2.rows[5].cells[0].style.display='none';
-        tb2.rows[6].cells[0].style.display='none';
-        tb2.rows[4].cells[0].rowSpan = 3;
-        tb2.rows[9].cells[0].style.display='none';
-        tb2.rows[10].cells[0].style.display='none';
-        tb2.rows[8].cells[0].rowSpan = 3;
-        tb2.rows[12].cells[0].style.display='none';
-        tb2.rows[13].cells[0].style.display='none';
-        tb2.rows[14].cells[0].style.display='none';
-        tb2.rows[15].cells[0].style.display='none';
-        tb2.rows[11].cells[0].rowSpan = 5;
-    </script> -->
-
     <font size="6" color="blue"><p align="center">饲料厂库存（天）</p></font>
-<!--     <div>
-        <table id="feedco" border="1" cellpadding="10" align="center">
+    <div class="container">
+        <table id="feedco" class="table table-striped table-bordered" border="1" cellpadding="10" align="center">
             {% for row in feedcarryout_df.values %}
             <tr>
                 {% for cell in row %}
@@ -110,6 +78,12 @@
     </div>
     <script type="text/javascript">
         var tb2 = document.getElementById("feedco"); 
+
+        var length = tb2.rows.item(0).cells.length;
+        console.log(length);
+        for(var i=0;i<length;i++){
+            tb2.rows[0].cells[i].style.background='LightSteelBlue';
+        }
         tb2.rows[2].cells[0].style.display='none';
         tb2.rows[3].cells[0].style.display='none';
         tb2.rows[4].cells[0].style.display='none';
@@ -120,7 +94,18 @@
         tb2.rows[6].cells[0].rowSpan = 3;
         tb2.rows[10].cells[0].style.display='none';
         tb2.rows[11].cells[0].style.display='none';
-        tb2.rows[12].cells[0].style.display='none';
-        tb2.rows[9].cells[0].rowSpan = 4;
-    </script> -->
+        tb2.rows[9].cells[0].rowSpan = 3;
+        tb2.rows[2].cells[3].style.display='none';
+        tb2.rows[3].cells[3].style.display='none';
+        tb2.rows[4].cells[3].style.display='none';
+        tb2.rows[5].cells[3].style.display='none';
+        tb2.rows[6].cells[3].style.display='none';
+        tb2.rows[7].cells[3].style.display='none';
+        tb2.rows[1].cells[3].rowSpan = 7;
+        tb2.rows[9].cells[3].style.display='none';
+        tb2.rows[10].cells[3].style.display='none';
+        tb2.rows[11].cells[3].style.display='none';
+        tb2.rows[8].cells[3].rowSpan = 4;
+    </script>
+
 {% endblock %}
