--- a/app/templates/tianqiqingkuang.html
+++ b/app/templates/tianqiqingkuang.html
@@ -36,13 +36,13 @@
 			<img id="drought_10" class="img-responsive">
 		</div>
 		<div class="col-sm-6 col-md-4">
+			<img id="nongyeDrought" class="img-responsive">
+		</div>
+		<div class="col-sm-6 col-md-4">
 			<img id="drought_365" class="img-responsive">
 		</div>
 		<div class="col-sm-6 col-md-4">
 			<img id="drought_730" class="img-responsive">
-		</div>
-		<div class="col-sm-6 col-md-4">
-			<img id="drought_1095" class="img-responsive">
 		</div>
 	</div>
 </div>
@@ -61,6 +61,6 @@
 	document.getElementById('drought_10').setAttribute("src", droughtUrl_l[2]);
 	document.getElementById('drought_365').setAttribute("src", droughtUrl_l[3]);
 	document.getElementById('drought_730').setAttribute("src", droughtUrl_l[4]);
-	document.getElementById('drought_1095').setAttribute("src", droughtUrl_l[5]);
+	document.getElementById('nongyeDrought').setAttribute("src", droughtUrl_l[5]);
 </script>
 {% endblock %}
