--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,6 @@
                 <div class="row">
                     <ul class="list-inline content_fontsize">
                         <li><a href="/priceSummarize" target="_blank">产区价格与工厂库存</a></li>
-                        <li><a href="/tianqiqingkuang" target="_blank">天气情况</a></li>
                         <li><a href="/shouliangjindu" target="_blank">售粮进度</a></li>
                         <li><a href="/portcarryout" target="_blank">南北港库存与价格</a></li>
                         <li><a href="/deepprocessing" target="_blank">深加工开工率与利润</a></li>
@@ -29,6 +28,7 @@
                 </div>
                 <div class="row">
                     <ul class="list-inline content_fontsize">
+                        <li><a href="/tianqiqingkuang" target="_blank">降水距平与干旱（中国）</a></li>
                         <li><a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a></li>
                         <li><a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a></li>
                         <li><a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a></li>
