add tianqi yubao html

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -28,7 +28,8 @@
                 </div>
                 <div class="row">
                     <ul class="list-inline content_fontsize">
-                        <li><a href="/tianqiqingkuang" target="_blank">降水距平与干旱（中国）</a></li>
+                        <li><a href="/tianqiqingkuang" target="_blank">降水距平与气象干旱（中国）</a></li>
+                        <li><a href="/tianqiyubao7" target="_blank">降水与气温预报（中国）</a></li>
                         <li><a href="http://www.nmc.cn/publish/agro/disastersmonitoring/Agricultural_Drought_Monitoring.htm" target="_blank">农业干旱监测(中国)</a></li>
                         <li><a href="http://cmdp.ncc-cma.net/cn/index.htm" target="_blank">气象干旱监测(中国)</a></li>
                         <li><a href="http://www.nmc.cn/publish/agro/information/soybean.html" target="_blank">作物发育期(中国)</a></li>
